--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -147,10 +147,10 @@
                                     </ul>
                                 </div>
                             
-                            <li><a href="{% url 'checkout' %}"><i class="fa fa-crosshairs"></i> Checkout</a></li>
+                            <!-- <li><a href="{% url 'checkout' %}"><i class="fa fa-crosshairs"></i> Checkout</a></li> -->
+                            <li><a href="#"><i class="fa fa-crosshairs"></i> Checkout</a></li>
                             <li><a href="{% url 'cartnew' %}"><i class="fa fa-shopping-cart"></i>{{cartItems}}
-                                Cartnew</a></li>
-                            <li><a href="{% url 'showcart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                                Cart</a></li>
                             {% else %}
                             <li><a href="{% url 'cartnew' %}"><i class="fa fa-shopping-cart"></i>{{cartItems}} Cart</a>
                             </li>
@@ -284,7 +284,7 @@
                 <div class="col-sm-3">
                     <div class="address">
                         <img alt="" src="{% static 'website/images/home/map.png' %}"/>
-                        <p>505 S Atlantic Ave Virginia Beach, VA(Virginia)</p>
+                        <p>505 S Atlantic Ave Virginia Beach, VA(California)</p>
                     </div>
                 </div>
             </div>
@@ -299,8 +299,8 @@
                         <h2>Service</h2>
                         <ul class="nav nav-pills nav-stacked">
                             <li><a href="{% url '404' %}">Online Help</a></li>
-                            <li><a href="#">Contact Us</a></li>
-                            <li><a href="#">Order Status</a></li>
+                            <li><a href="{% url '404' %}">Contact Us</a></li>
+                            <li><a href="{% url '404' %}">Order Status</a></li>
                             <li><a href="{% url '404' %}">Change Location</a></li>
                             <li><a href="{% url '404' %}">FAQ’s</a></li>
                         </ul>
@@ -310,8 +310,8 @@
                     <div class="single-widget">
                         <h2>Quick Shop</h2>
                         <ul class="nav nav-pills nav-stacked">
-                            <li><a href="#">T-Shirt</a></li>
-                            <li><a href="#">Mens</a></li>
+                            <li><a href="{% url '404' %}">T-Shirt</a></li>
+                            <li><a href="{% url '404' %}">Mens</a></li>
                             <li><a href="{% url 'womens' %}">Womens</a></li>
                             <li><a href="{% url '404' %}">Gift Cards</a></li>
                             <li><a href="{% url '404' %}">Shoes</a></li>
