--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -188,7 +188,9 @@
                         </div>
                     </div><!--/brands_products-->
 
-                    <div class="price-range"><!--price-range-->
+<!--price-range-->
+
+                    <!-- <div class="price-range">
                         <h2>Price Range</h2>
                         <div class="list-group list-group-flush">
                             <li class="list-group-item">
@@ -205,7 +207,9 @@
                                 <button class="btn btn-info btn-sm mt-1" id="priceFilterBtn">Filter</button>
                             </li>
                         </div>
-                    </div><!--/price-range-->
+                    </div> -->
+
+                    <!--/price-range-->
 
                     {% for sf in sideofferbar %}
                     <div class="shipping text-center"><!--shipping-->
